--- a/templates/admin/adminStoryData.html.twig
+++ b/templates/admin/adminStoryData.html.twig
@@ -4,7 +4,7 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
-    <h1>{{ story.title }}</h1>
+    <h1>{{ story.title|upper }}</h1>
     <div class="container-fluid entityData">
         <div class="reminder">
             <ul class="list-inline">
