--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -11,12 +11,12 @@
             <p id="showPart1"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story topic and patronage</p>
                 <div class="form-group row col-md-12 part1" style="display: block">
                     {{ form_label(form.topic) }}<span class="req">*</span>
-                    {{ form_widget(form.topic ,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.topic ,{'attr':{'class':'notBlank'}}) }}
                     <span class="invalidBack">{{ form_errors(form.topic) }}</span>
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
                     {{ form_label(form.worldArea) }}<span class="req">*</span>
-                    {{ form_widget(form.worldArea ,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.worldArea ,{'attr':{'class':'notBlank'}}) }}
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
                     {{ form_label(form.country) }}
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
                     {{ form_label(form.patronage) }}<span class="req">*</span>
-                    {{ form_widget(form.patronage,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.patronage,{'attr':{'class':'notBlank'}}) }}
                     <span class="invalidBack">{{ form_errors(form.patronage) }}</span>
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
                     {{ form_label(form.year) }}<span class="req">*</span>
-                    {{ form_widget(form.year ,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.year ,{'attr':{'class':'notBlank'}}) }}
                 <span class="invalidBack">{{ form_errors(form.year) }}</span>
             </div>
         </div>
@@ -50,7 +50,7 @@
             <p id="showPart2"><i class="fa fa-caret-down" aria-hidden="true"></i> Story's abstract and narrative</p>
                 <div class="form-group row col-md-12 part2" style="display: none">
                     {{ form_label(form.title) }}<span class="req">*</span>
-                    {{ form_widget(form.title ,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.title ,{'attr':{'class':'notBlank'}}) }}
                     <span class="invalidBack">{{ form_errors(form.title) }}</span>
                     <span class="invalid_sign" id="invalid_title_icon" style="display: none">
                         <i class="fa fa-times" aria-hidden="true"></i>
@@ -90,7 +90,7 @@
             <p id="showPart3"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story's intel</p>
             <div class="form-group row col-md-12 part3" style="display: none">
                 {{ form_label(form.contactEmail) }}<span class="req">*</span>
-                {{ form_widget(form.contactEmail ,{'attr':{'class':'form-control'}}) }}
+                {{ form_widget(form.contactEmail ,{'attr':{'class':'notBlank'}}) }}
                 <span class="invalidBack">{{ form_errors(form.contactEmail) }}</span>
                 <span class="invalid_sign" id="invalid_email_icon" style="display: none">
                     <i class="fa fa-times" aria-hidden="true"></i>
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="form-group row part4 col-md-12 text-center">
-            <button class="btn btn-success" id="addStoryBtn" type="submit">Submit</button>
+            <button class="btn btn-success" id="addStoryBtn" type="submit" disabled>Submit</button>
             <input id="userMail" type="hidden" value="{{ app.user.email }}">
         </div>
         {{ form_end(form) }}
