--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -91,6 +91,7 @@
 
             {% endblock %}
            {% block javascripts %}
+               <script src="{{ asset('js/default.js') }}"></script>
            {% endblock %}
            <div class="push"></div>
         </div>
