--- a/templates/admin/adminUser.html.twig
+++ b/templates/admin/adminUser.html.twig
@@ -29,10 +29,10 @@
                 <th>
                     <i class="fa fa-calendar" aria-hidden="true"></i>
                 </th>
-                <th>
+                <th class="centerText">
                     Activated
                 </th>
-                <th>
+                <th class="centerText">
                     <i class="fa fa-info" aria-hidden="true"></i>
                 </th>
             </tr>
@@ -52,11 +52,11 @@
                     <td>
                         {{ user.registeredOn|date("d/m/Y") }}
                     </td>
-                    <td>
+                    <td class="centerText">
                         <span class="hint">Activated&ensp;?</span><br>
                         <i class="{{ user.activated|stateIcon }}" aria-hidden="true"></i>
                     </td>
-                    <td>
+                    <td class="centerText">
                         <span class="hint">More info</span><br>
                         <a href="{{ path('adminByUser',{'id': user.id}) }}">
                             <i class="fa fa-plus" aria-hidden="true"></i>
