--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -4,7 +4,7 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
-    <h1 class="smallTitle"> DASHBOARD </h1>
+    <h1 class="smallTitle adminTitle"> DASHBOARD </h1>
 
     <div class="iconBlock">
         <i class="fa fa-dashboard fa-5x" aria-hidden="true"></i>
