--- a/templates/admin/adminEditStory.html.twig
+++ b/templates/admin/adminEditStory.html.twig
@@ -3,7 +3,7 @@
 
 {{ include('admin/adminNav.html.twig') }}
 
-<h1>EDIT "{{ story.title|upper }}"</h1>
+<h1 class="adminTitle">EDIT "{{ story.title|upper }}"</h1>
 
 <div class="container-fluid entityData">
 
