--- a/templates/admin/adminPatronage.html.twig
+++ b/templates/admin/adminPatronage.html.twig
@@ -4,7 +4,7 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
-    <h1>PATRONAGES</h1>
+    <h1 class="adminTitle">PATRONAGES</h1>
 
     <div class="container-fluid adminList">
         <table class="table">
