--- a/templates/admin/adminStory.html.twig
+++ b/templates/admin/adminStory.html.twig
@@ -4,7 +4,7 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
-    <h1>{{ title|upper }}</h1>
+    <h1 class="adminTitle">{{ title|upper }}</h1>
 
     <div class="filterList">
         <input type="checkbox" id="publishedStories" name="published" value="unpublished">
