--- a/templates/admin/adminUser.html.twig
+++ b/templates/admin/adminUser.html.twig
@@ -3,7 +3,7 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
-    <h1>USERS</h1>
+    <h1 class="adminTitle">USERS</h1>
 
     <div class="container-fluid adminList">
 
