--- a/templates/admin/adminUserData.html.twig
+++ b/templates/admin/adminUserData.html.twig
@@ -4,7 +4,7 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
-    <h1 class="smallTitle">{{ user.fullname|upper }}</h1>
+    <h1 class="smallTitle adminTitle">{{ user.fullname|upper }}</h1>
 
     <div class="container-fluid entityData">
         <div class="reminder">
