--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,7 +63,7 @@
                  </ul>
                 {% endif %}
                 {% if is_granted('ROLE_USER') %}
-                <ul class="nav navbar-nav navbar-right" id="connection">
+                <ul class="nav navbar-nav navbar-right" id="disconnect">
                     <li>
                         <a class="btn" id="logout" href="{{ path('logout') }}">Sign out</i>
                         </a>
