[mod/html] link to term creation page

--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -55,6 +55,11 @@
         <div class="trigger col-sm-6">
             <button class="btn btn-primary pull-right">Modify administrator login</button>
         </div>
+        <div>
+            <a href="{{ path('adminCreateTerm') }}" class="btn btn-warning">
+               term
+            </a>
+        </div>
     </div>
 
     <div class="modalForm" id="modalAdmin"  style="display: none">
