--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -56,7 +56,7 @@
             <button class="btn btn-primary pull-right">Modify administrator login</button>
         </div>
         <div>
-            <a href="{{ path('adminCreateTerm') }}" class="btn btn-warning">
+            <a href="{{ path('adminLegal') }}" class="btn btn-warning">
                term
             </a>
         </div>
