--- a/templates/admin/adminNav.html.twig
+++ b/templates/admin/adminNav.html.twig
@@ -6,6 +6,7 @@
     <a href="{{ path('adminStory') }}">Stories</a>
     <a href="{{ path('adminTopic') }}">Topics</a>
     <a href="{{ path('adminPatronage') }}">Patronages</a>
+    <a href="#">Legal Notice</a>
 </div>
 
 <span id="open"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
